<?xml version="1.0" encoding="utf-8"?><resources>    <string name="app_name">HopGrower</string>    <string name="action_settings">Action Settings</string>    <string name="app_sched">HopGrower Scheduler</string>    <string name="app_growlog">HopGrower GrowLog</string>    <string name="app_myhops">HopGrower MyHops</string>    <string name="app_notes">HopGrower Notes</string>    <string name="app_varieties">HopGrower Varieties</string>    <string name="app_about">HopGrower About</string>    <string name="app_kb">HopGrower KnowledgeBase</string>    <string name="app_links">HopGrower Links</string>    <string name="app_settings">HopGrower Links</string>    <string name="about">HopGrower is a trademarked app by HopsFromVirginia.com. 2014</string>    <string name="version">HopGrower for Android Version 1.0</string>    <string name="updates">Check for updates</string>    <string name="dbinfo">Getting dbase info</string>    <string name="title">Title: </string>    <string name="body">Note:</string>    <string name="save">Save Note</string>    <string name="no_notes">No Notes Yet-Use menu to select add note</string>    <string name="menu_insert">Add Note</string>    <string name="menu_delete">Delete Note</string>    <string name="confirm">Confirm</string>    <string name="ok">Ok</string>    <string name="cancel">Cancel</string>    <string name="clear">Clear</string>    <string name="del_series">Delete entire series?</string>    <string name="edit_note">Edit Note</string>    <string name="add_mh">Save MyHops Record</string>    <string name="edit_mh">Edit MyHops Record</string>    <string name="delete_mh">Delete MyHops Record</string>    <string name="hopunion">Variety data obtained from the HopUnion website: http://www.hopunion.com</string>    <string name="close">Close</string>    <string name="daily">Daily</string>    <string name="weekly">Weekly</string>    <string name="twoweeks">Every Two Weeks</string>    <string name="monthly">Monthly</string>    <string name="category">Category:</string>    <string name="category_prompt">Select category</string>    <string name="my_hops">myHops</string>    <string name="mhpanel">MyHops — Create a new panel</string>    <string name="mhdisp_panel">MyHops</string>    <string name="num_bines">Num. of Bines: </string>    <string name="yr_planted">Year Planted:</string>    <string name="radio1">Bines</string>    <string name="radio2">HopYard</string>    <string name="variety">Variety:</string>    <string name="acreage">Acres:</string>    <string name="location">Location:</string>    <string name="density">Bines per acre: </string>    <string name="trellis_hgt">Trellis height:</string>    <string name="irr_type">Irrigation:</string>    <string name="date_planted">Date planted:</string>    <string name="email_addy_text">Email address:</string>    <string name="email_select_text">Select data to send:</string>    <string name="email_button_text">Send</string>    <string name="growlog">GrowLog Entries</string>    <string name="growlog_recs">GrowLog Records</string>    <string name="growlog_add">Add GrowLog Record</string>    <string name="growlog_save">Save GrowLog Record</string>    <string name="growlog_cat">Record Category:</string>    <string name="growlog_cutback">Cutback:</string>    <string name="growlog_fertilize">Fertilizer:</string>    <string name="growlog_nfest">Infestation:</string>    <string name="growlog_nsect">Insects:</string>    <string name="growlog_cide">Type:</string>    <string name="growlog_ht">Bine Height:</string>    <string name="growlog_hcone">Hop Cone Growth:</string>    <string name="growlog_irrig">Irrigation:</string>    <string name="growlog_disease">Type:</string>    <string name="growlog_fungi">Fungicide:</string>    <string name="growlog_harvest">Type:</string>    <string name="growlog_edit">Edit</string>    <string name="growlog_delete">Delete</string>    <string name="glog_dialog_caption">What do you want to do?</string>    <string name="glogcancel">Cancel</string>    <string name="glogedit">Edit</string>    <string name="glogdele">Delete record</string>    <string name="myhops_add">Add MyHops Record</string>    <string name="myhops_save">Save MyHops Record</string>    <string name="myhops">MyHop Fields</string>    <string name="scheduler">HopGrower Scheduler</string>    <string name="scheduler_event">Scheduled Events</string>    <string name="scheduler_newrec">Scheduler -- Create New Record</string>    <string name="scheduler_cat">Event:</string>    <string name="scheduler_none">No Scheduled Events</string>    <string name="scheduler_create">Create New Event</string>    <string name="scheduler_save">Save Event</string>    <string name="scheduler_clear">Clear</string>    <string name="scheduler_cancel">Cancel</string>    <string name="scheduler_start">Start date:</string>    <string name="scheduler_end">End date:</string>    <string name="scheduler_location">Location:</string>    <string name="mail_title">Mail Hop Data</string>    <string name="recurring">Recurring Event</string>    <string name="customize">Customize</string>    <string name="show_dialog">Show Dialog</string>    <string name="undo">Undo</string>    <string name="dateSliderTitle">Selected date</string>    <string name="date_app_name">DateSlider v1 Demo</string>    <string name="mhschedule">Scheduled Events</string>    <string name="mhgrowlog">Growlog Records</string>    <string name="mhnotes">Notes</string></resources>