<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:orientation="vertical"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="#FF10DA5C">    <LinearLayout        android:orientation="horizontal"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/title"            android:textSize="20sp" />        <EditText            android:id="@+id/title"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:inputType="text"            android:layout_weight="1" />    </LinearLayout>    <LinearLayout        android:orientation="horizontal"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/category"            android:textSize="20sp" />        <Spinner            android:id="@+id/category_spinner"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:entries="@array/categories"            android:prompt="@string/category_prompt" />    </LinearLayout>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/body"        android:textSize="20sp" />    <EditText        android:id="@+id/body"        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="2"        android:inputType="text"        android:scrollbars="vertical"        android:lines="5" />    <LinearLayout        android:orientation="horizontal"        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="3"        android:gravity="center">        <Button            android:id="@+id/cancel"            android:text="@string/cancel"            android:layout_width="wrap_content"            android:layout_height="wrap_content" />        <Button            android:id="@+id/confirm"            android:text="@string/save"            android:layout_width="wrap_content"            android:layout_height="wrap_content" />    </LinearLayout></LinearLayout>