<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <RadioGroup        android:id="@+id/radioGroup1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="0dp"        android:orientation="horizontal">        <RadioButton            android:id="@+id/radio1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:checked="true"            android:layout_weight="1"            android:textSize="20sp"            android:layout_marginRight="20dp"            android:text="@string/radio1"            android:textColor="#000000" />        <RadioButton            android:id="@+id/radio2"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="20sp"            android:text="@string/radio2"            android:textColor="#000000" />    </RadioGroup>    <TableLayout        android:layout_width="match_parent"        android:layout_height="match_parent">        <!-- Variety -->        <TableRow            android:id="@+id/layout1"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/variety"                android:textColor="#000000" />            <Spinner                android:id="@+id/variety"                android:layout_width="200dp"                android:layout_height="wrap_content" />        </TableRow>        <!-- Year Planted -->        <TableRow            android:id="@+id/layout_yrplant"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:id="@+id/yptext"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/yr_planted"                android:textColor="#000000" />            <Spinner                android:id="@+id/yrplant"                android:layout_height="wrap_content"                android:layout_width="25dip"                android:entries="@array/yearsago" />        </TableRow>        <!-- Location -->        <TableRow            android:id="@+id/layout_loc"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:id="@+id/textView1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/location"                android:textColor="#000000" />            <EditText                android:id="@+id/location"                android:layout_height="wrap_content"                android:layout_width="50dip"                android:imeOptions="actionNext" />        </TableRow>        <!-- Acreage -->        <TableRow            android:id="@+id/layout_acreage"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:visibility="gone">            <TextView                android:id="@+id/acreage_text"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/acreage"                android:textColor="#000000" />            <EditText                android:id="@+id/acreage"                android:layout_height="wrap_content"                android:layout_width="100dip"                android:imeOptions="actionNext" />        </TableRow>        <!-- Bines -->        <TableRow            android:id="@+id/layout_bines"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:id="@+id/bines_text"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/num_bines"                android:textColor="#000000" />            <EditText                android:id="@+id/bines"                android:layout_height="wrap_content"                android:layout_width="100dip"                android:imeOptions="actionDone" />        </TableRow>        <!-- Density -->        <TableRow            android:id="@+id/layout_density"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:visibility="gone">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/density"                android:textColor="#000000" />            <EditText                android:id="@+id/density"                android:layout_height="wrap_content"                android:layout_width="10dip"                android:imeOptions="actionDone" />        </TableRow>        <!-- trellis height -->        <TableRow            android:id="@+id/layout5"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/trellis_hgt"                android:textColor="#000000" />            <Spinner                android:id="@+id/trellis_height"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:entries="@array/listTHeight" />        </TableRow>        <!-- Irrigation type -->        <TableRow            android:id="@+id/layout7"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="20sp"                android:text="@string/irr_type"                android:textColor="#000000" />            <Spinner                android:id="@+id/irrigation"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:entries="@array/glrec_irrigate" />        </TableRow>        <TableRow            android:layout_width="match_parent"            android:layout_height="wrap_content">            <Button                android:id="@+id/mh_button_cancel"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:text="@string/cancel"                android:width="100dip"                android:layout_marginLeft="10dp"                android:layout_marginRight="10dp"                android:layout_weight="1" />            <Button                android:id="@+id/mh_button_edit"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:text="@string/add_mh"                android:width="100dip"                android:layout_marginLeft="10dp"                android:layout_marginRight="10dp"                android:layout_weight="1" />        </TableRow>    </TableLayout></LinearLayout>