<?xml version="1.0" encoding="utf-8"?><RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_marginLeft="30dip"    android:orientation="horizontal">    <RadioButton        android:id="@+id/weekly"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="left"        android:focusable="false"        android:text="@string/weekly"        android:onClick="onAppUpdateRadioButtonClick"></RadioButton>    <RadioButton        android:id="@+id/twoweeks"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginLeft="30dip"        android:layout_gravity="right"        android:focusable="false"        android:text="@string/twoweeks"        android:onClick="onAppUpdateRadioButtonClick"></RadioButton>    <RadioButton        android:id="@+id/monthly"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginLeft="30dip"        android:layout_gravity="right"        android:focusable="false"        android:text="@string/monthly"        android:checkedButton="3"        android:onClick="onAppUpdateRadioButtonClick"></RadioButton></RadioGroup>