<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <TextView            android:id="@+id/hg_cal_title2"            android:layout_width="match_parent"            android:layout_height="35dp"            android:paddingLeft="10dp"            android:layout_margin="5dp"            android:text="@string/scheduler_newrec"            android:textSize="22sp"            android:textStyle="bold"            android:textColor="#FFFFFF"            android:background="@drawable/text_border" />    </LinearLayout>    <CheckBox        android:id="@+id/schedCheckBox"        android:text="@string/recurring"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:textColor="#FFFFFF"        android:checked="false"        android:paddingRight="20dp" />    <RadioGroup        android:id="@+id/RadioGroup"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        style="@style/MyRadioButtonStyle">        <RadioButton            android:text="@string/daily"            android:id="@+id/radio1"            android:textColor="#FFFFFF"            android:paddingRight="20dp"            android:enabled="false"            style="@style/MyRadioButtonStyle" />        <RadioButton            android:text="@string/weekly"            android:id="@+id/radio2"            android:textColor="#FFFFFF"            android:paddingRight="20dp"            android:enabled="false"            style="@style/MyRadioButtonStyle" />        <RadioButton            android:text="@string/monthly"            android:id="@+id/radio3"            android:textColor="#FFFFFF"            android:enabled="false"            style="@style/MyRadioButtonStyle" />    </RadioGroup>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <View            android:id="@+id/firstDivider"            android:layout_height="2dp"            android:layout_width="fill_parent"            android:background="#10DA5C" />    </LinearLayout>    <TableLayout        android:id="@+id/TableLayout1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:columnCount="4"        android:rowCount="3"        android:orientation="horizontal">        <TableRow            android:layout_width="wrap_content"            android:layout_height="wrap_content">            <TextView                android:id="@+id/scheduler_date1"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:gravity="right"                android:text="@string/scheduler_start"                android:textSize="20sp"                android:textColor="#FFFFFF"                android:paddingRight="3dp"                android:paddingLeft="3dp" />            <Spinner                android:id="@+id/sched_start_month"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp"                android:entries="@array/recmonths" />            <Spinner                android:id="@+id/sched_start_day"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp" />            <Spinner                android:id="@+id/sched_start_year"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp"                android:entries="@array/recyears" />        </TableRow>        <TableRow            android:layout_width="wrap_content"            android:layout_height="wrap_content">            <TextView                android:id="@+id/scheduler_date2"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:gravity="right"                android:text="@string/scheduler_end"                android:textSize="20sp"                android:textColor="#FFFFFF"                android:paddingRight="3dp"                android:paddingLeft="3dp" />            <Spinner                android:id="@+id/sched_end_month"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp"                android:entries="@array/recmonths" />            <Spinner                android:id="@+id/sched_end_day"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp" />            <Spinner                android:id="@+id/sched_end_year"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="10dp"                android:entries="@array/recyears" />        </TableRow>        <TableRow            android:layout_width="wrap_content"            android:layout_height="wrap_content">            <TextView                android:id="@+id/scheduler_location"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:gravity="right"                android:text="@string/scheduler_location"                android:textSize="20sp"                android:textColor="#FFFFFF"                android:paddingRight="3dp"                android:paddingLeft="3dp" />            <Spinner                android:id="@+id/sched_myhops"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textColor="#000000"                android:layout_gravity="top"                android:textSize="16sp"                android:layout_span="3" />        </TableRow>        <TableRow            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="top">            <TextView                android:id="@+id/scheduler_cato"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:gravity="right"                android:text="@string/scheduler_cat"                android:textSize="20sp"                android:textColor="#FFFFFF"                android:paddingRight="3dp"                android:paddingLeft="3dp" />            <Spinner                android:id="@+id/scheduler_catspin"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:minWidth="150dp"                android:entries="@array/schrec_cats" />            <EditText                android:id="@+id/sch_event_text"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:inputType="text"                android:padding="10dp"                android:imeOptions="actionDone"                android:layout_span="2"                android:visibility="gone" />        </TableRow>    </TableLayout>    <EditText        android:id="@+id/sch_event_text2"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:inputType="text"        android:padding="10dp"        android:imeOptions="actionDone" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="60dp"        android:orientation="horizontal">        <Button            android:layout_marginTop="5dip"            android:text="@string/scheduler_clear"            android:layout_marginBottom="10dp"            android:id="@+id/button0"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"></Button>        <Button            android:layout_marginTop="5dip"            android:text="@string/scheduler_save"            android:layout_marginBottom="10dp"            android:id="@+id/button1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"></Button>    </LinearLayout></LinearLayout>