<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    android:background="#019E39">    <TextView        android:id="@+id/mail_title"        android:layout_width="match_parent"        android:layout_height="60dp"        android:padding="10dp"        android:text="@string/mail_title"        android:textSize="22sp"        android:textStyle="bold"        android:textColor="#FFFFFF"        android:background="@drawable/text_border" />    <LinearLayout        android:id="@+id/inforow"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <TextView            android:id="@+id/email_addy_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:padding="10dp"            android:text="@string/email_addy_text"            android:textSize="20sp"            android:textColor="#000000" />        <EditText            android:id="@+id/email_addy"            android:layout_width="200dp"            android:layout_height="match_parent"            android:inputType="textEmailAddress"            android:imeOptions="actionDone" />    </LinearLayout>    <LinearLayout        android:id="@+id/inforow2"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">    </LinearLayout>    <LinearLayout        android:id="@+id/email_sel"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <TextView            android:id="@+id/email_select"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:padding="10dp"            android:text="@string/email_select_text"            android:textSize="20sp"            android:textColor="#000000" />    </LinearLayout>    <LinearLayout        android:id="@+id/email_sel_data"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <Spinner            android:id="@+id/email_spin"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:entries="@array/email_array" />        <Spinner            android:id="@+id/email_data"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:visibility="gone" />    </LinearLayout>    <LinearLayout        android:id="@+id/email_final"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <Button            android:id="@+id/email_button"            android:text="@string/email_button_text"            android:layout_width="100dp"            android:layout_height="50dp" />    </LinearLayout></LinearLayout>