<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="#10DA5C"    android:orientation="vertical">    <TextView        android:id="@+id/hg_cal_title"        android:layout_width="match_parent"        android:layout_height="60dp"        android:text="@string/scheduler_newrec"        android:textSize="22sp"        android:textStyle="bold"        android:textColor="#FFFFFF"        android:padding="10dp"        android:background="@drawable/text_border" />    <LinearLayout        android:id="@+id/slider_ll_start"        android:layout_width="500dip"        android:layout_height="wrap_content"        android:orientation="horizontal">        <TextView            android:id="@+id/scheduler_date1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/scheduler_start"            android:textSize="20sp"            android:textColor="#FFFFFF"            android:paddingRight="3dp"            android:paddingLeft="3dp" />        <Spinner            android:id="@+id/sched_start_month"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp"            android:entries="@array/recmonths" />        <Spinner            android:id="@+id/sched_start_day"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp" />        <Spinner            android:id="@+id/sched_start_year"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp"            android:entries="@array/recyears" />    </LinearLayout>    <View        android:id="@+id/blankDivider"        android:layout_height="10dp"        android:layout_width="fill_parent"        android:padding="2dp" />    <LinearLayout        android:id="@+id/slider_ll_end"        android:layout_width="500dip"        android:layout_height="wrap_content"        android:orientation="horizontal">        <TextView            android:id="@+id/scheduler_date2"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/scheduler_end"            android:textSize="20sp"            android:textColor="#FFFFFF"            android:paddingRight="3dp"            android:paddingLeft="3dp" />        <Spinner            android:id="@+id/sched_end_month"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp"            android:entries="@array/recmonths" />        <Spinner            android:id="@+id/sched_end_day"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp" />        <Spinner            android:id="@+id/sched_end_year"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="10dp"            android:entries="@array/recyears" />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:orientation="horizontal"        android:layout_weight="1">        <View            android:id="@+id/firstDivider"            android:layout_height="2dp"            android:layout_width="fill_parent"            android:background="#019E39"            android:padding="2dp" />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="60dp"        android:orientation="horizontal">        <TextView            android:id="@+id/scheduler_cato"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/scheduler_cat"            android:textSize="20sp"            android:textColor="#FFFFFF"            android:paddingRight="3dp"            android:paddingLeft="3dp" />        <Spinner            android:id="@+id/scheduler_catspin"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minWidth="150dp"            android:entries="@array/schrec_cats" />        <EditText            android:id="@+id/scheduler_other"            android:layout_width="0dp"            android:layout_height="match_parent"            android:inputType="text"            android:layout_weight="3"            android:imeOptions="actionDone"            android:visibility="gone" />    </LinearLayout>    <EditText        android:id="@+id/sch_event_text"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:inputType="text"        android:padding="10dp"        android:imeOptions="actionDone" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="60dp"        android:orientation="horizontal">        <Button            android:layout_marginTop="5dip"            android:text="@string/scheduler_cancel"            android:layout_marginBottom="10dp"            android:id="@+id/button0"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"></Button>        <Button            android:layout_marginTop="5dip"            android:text="@string/scheduler_save"            android:layout_marginBottom="10dp"            android:id="@+id/button1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"></Button>    </LinearLayout></LinearLayout>